--- a/px-chart/demo.html
+++ b/px-chart/demo.html
@@ -46,12 +46,12 @@
     <px-chart-yaxis title='{"text": "Right Axis"}' id="anotherAxis" opposite="true" offset="-2.5"></px-chart-yaxis>
     <px-chart-series-line id="delta-egt-cruise" axis-id="firstAxis" upper-threshold="30.5" lower-threshold="6.25" units="Hz">
       <iron-ajax
-        url="/bower_components/px-demo-data/demo-data/aviation/delta-egt-cruise.json"
+        url="../px-demo-data/demo-data/aviation/delta-egt-cruise.json"
         handle-as="json"></iron-ajax>
     </px-chart-series-line>
     <px-chart-series-line id="fan-vibration-cruise" axis-id="anotherAxis" units="Hz">
       <iron-ajax
-        url="/bower_components/px-demo-data/demo-data/aviation/fan-vibration-cruise.json"
+        url="../px-demo-data/demo-data/aviation/fan-vibration-cruise.json"
         handle-as="json"></iron-ajax>
     </px-chart-series-line>
   </px-chart>
@@ -72,7 +72,7 @@
   <px-chart>
     <px-chart-series-line id="fan-vibration-cruise" units="Hz">
       <iron-ajax
-        url="/bower_components/px-demo-data/demo-data/aviation/fan-vibration-cruise.json"
+        url="../px-demo-data/demo-data/aviation/fan-vibration-cruise.json"
         handle-as="json"></iron-ajax>
     </px-chart-series-line>
   </px-chart>
@@ -83,7 +83,7 @@
   <px-chart tooltip-kind='hc'>
     <px-chart-series-line id="fan-vibration-cruise" units="Hz">
       <iron-ajax
-        url="/bower_components/px-demo-data/demo-data/aviation/fan-vibration-cruise.json"
+        url="../px-demo-data/demo-data/aviation/fan-vibration-cruise.json"
         handle-as="json"></iron-ajax>
     </px-chart-series-line>
   </px-chart>
@@ -94,7 +94,7 @@
   <px-chart type="scatter">
     <px-chart-series-scatter id="fan-vibration-cruise" units="Hz">
       <iron-ajax
-        url="/bower_components/px-demo-data/demo-data/aviation/fan-vibration-cruise.json"
+        url="../px-demo-data/demo-data/aviation/fan-vibration-cruise.json"
         handle-as="json"></iron-ajax>
     </px-chart-series-scatter>
   </px-chart>
@@ -105,17 +105,17 @@
   <px-chart type="bar">
     <px-chart-series-bar id="fan-vibration-cruise" units="Hz">
       <iron-ajax
-        url="/bower_components/px-demo-data/demo-data/aviation/fan-vibration-cruise.json"
+        url="../px-demo-data/demo-data/aviation/fan-vibration-cruise.json"
         handle-as="json"></iron-ajax>
     </px-chart-series-bar>
     <px-chart-series-bar id="fan-vibration-cruise2" units="Hz">
       <iron-ajax
-        url="/bower_components/px-demo-data/demo-data/aviation/fan-vibration-cruise2.json"
+        url="../px-demo-data/demo-data/aviation/fan-vibration-cruise2.json"
         handle-as="json"></iron-ajax>
     </px-chart-series-bar>
     <px-chart-series-bar id="core-vibe-rear-cruise" units="Hz">
       <iron-ajax
-        url="/bower_components/px-demo-data/demo-data/aviation/core-vibe-rear-cruise.json"
+        url="../px-demo-data/demo-data/aviation/core-vibe-rear-cruise.json"
         handle-as="json"></iron-ajax>
     </px-chart-series-bar>
   </px-chart>
@@ -126,7 +126,7 @@
   <px-chart type="histogram" tooltip-timestamp='hide'>
     <px-chart-series-histogram id="fan-vibration-cruise">
       <iron-ajax
-        url="/bower_components/px-demo-data/demo-data/aviation/fan-vibration-cruise.json"
+        url="../px-demo-data/demo-data/aviation/fan-vibration-cruise.json"
         handle-as="json"></iron-ajax>
     </px-chart-series-histogram>
   </px-chart>
@@ -140,7 +140,7 @@
     Polymer.dom(document).querySelector('.full-config-example px-chart').addEventListener("refresh-series", function(evt) {
       if (evt.detail === "fan-vibration-cruise") {
         var ironAjaxEl = document.createElement('iron-ajax');
-        ironAjaxEl.url = '/bower_components/px-demo-data/demo-data/aviation/fan-vibration-cruise2.json';
+        ironAjaxEl.url = '../px-demo-data/demo-data/aviation/fan-vibration-cruise2.json';
         ironAjaxEl.handleAs = "json";
         ironAjaxEl.addEventListener('response', function(evt) {
           var tsChart = Polymer.dom(document).querySelector('.full-config-example px-chart');
